--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ footer{
 @media screen and (max-width:450px){
     .home{
         display: flex;
-        flex-direction: column;
+        flex-direction: column-reverse;
         height:85vh;
     }
     div.text{
